--- a/config/database.yml
+++ b/config/database.yml
@@ -14,12 +14,12 @@
 #
 development:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: mms_development
   pool: 5
   username: postgres
-  password: password
-  port: 5433
+  password: postgres
+  port: 5432
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -39,20 +39,22 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
 test:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: mms_test
   pool: 5
   username: postgres
-  password: password
-  port: 5433
+  password: postgres
+  port: 5432
 
 production:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: mms_production
   pool: 5
   username: postgres
-  password: password
-  port: 5433
+  password: postgres
+  port: 5432
+  
