--- a/config/database.yml
+++ b/config/database.yml
@@ -18,8 +18,8 @@ development:
   database: mms_development
   pool: 5
   username: postgres
-  password: rootroot
-  port: 5432
+  password: password
+  port: 5433
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -45,8 +45,8 @@ test:
   database: mms_test
   pool: 5
   username: postgres
-  password: rootroot
-  port: 5432
+  password: password
+  port: 5433
 
 production:
   adapter: postgresql
@@ -54,5 +54,5 @@ production:
   database: mms_production
   pool: 5
   username: postgres
-  password: rootroot
-  port: 5432
+  password: password
+  port: 5433
