--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ development:
   database: mms_development
   pool: 5
   username: postgres
-  password: rootroot
+  password: postgres
   port: 5432
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -46,7 +46,7 @@ test:
   database: mms_test
   pool: 5
   username: postgres
-  password: rootroot
+  password: postgres
   port: 5432
 
 production:
